# solana-script-compressed-nft

./: .gitignore  README.md  example.env  read-cnft-by-helius.json  tsconfig.json
ReadApi/: WrapperConnection.ts
response/: create-collection-response.json  get-parsed-burn-transaction.json  get-parsed-transaction.json  getTx.json  read-cnft-by-shyft.json  read-nft-by-shyft.json
scripts/: burnCompressedNFT.ts  createAndMint.ts  createMarketplaceByShyft.ts  fetchNFTsByCollection.ts  fetchNFTsByOwner.ts  fetchNFTsByShyft.ts  fullShyftAPI.ts  getTransactionReceipt.ts  mintToCollection.ts
transfer_cnft/: Anchor.toml  README.md  env  package.json  test.ts
transfer_cnft/programs/cnft-vault/: Cargo.toml
transfer_cnft/programs/cnft-vault/src/: lib.rs
transfer_cnft/tests/: cnft_vault-keypair.json  tests.ts
transfer_cnft/tests/scripts/: constants.ts  withdraw.ts  withdrawTwo.ts  withdrawWithLookup.ts
transfer_cnft/utils/: WrapperConnection.ts  compression.ts  utils.ts
