[package]
name = "cnft-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cnft_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.14"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
spl-account-compression = { version="0.1.8", features = ["cpi"] }
mpl-bubblegum = { version = "0.7.0", features = ["no-entrypoint", "cpi"] } 